hphp/hack/test/typecheck/coeffects/closures_subtyping_implicit.bad.php.legacy_decl.exp
File "closures_subtyping_implicit.bad.php", line 4, characters 10-35:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 3, characters 65-69:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 3, characters 39-49:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_implicit.bad.php", line 8, characters 10-35:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 7, characters 62-63:
  Expected a function that requires the capability set {}
  File "closures_subtyping_implicit.bad.php", line 7, characters 37-47:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_implicit.bad.php", line 13, characters 12-37:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 12, characters 72-76:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 12, characters 46-56:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_implicit.bad.php", line 17, characters 12-37:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 16, characters 69-70:
  Expected a function that requires the capability set {}
  File "closures_subtyping_implicit.bad.php", line 16, characters 44-54:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_implicit.bad.php", line 25, characters 22-23:
Invalid argument (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 21, characters 41-45:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 23, characters 42-52:
  But got a function that requires the capability set {RxLocal, WriteProperty}
